[FIX] : Text overflow in mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1051,6 +1051,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------------------------------------*/
 #hotels {
   padding: 60px 0;
+  word-wrap: break-word;
 }
 
 #hotels .hotel {
